--- a/requirements.manual.txt
+++ b/requirements.manual.txt
@@ -2,5 +2,7 @@ django
 djangorestframework
 django-cors-headers
 django-filter
+django-heroku
+gunicorn
 python-dotenv
 djangorestframework-simplejwt
